# smart-ffmpeg

./: .env  .env.example  .gitignore  Makefile  README.md  pyproject.toml  smart_ffmpeg.py
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml
